			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04i: *********************************

BUG: (4/3/06, GVG) Null exception in Simulation.java if format is not correct but anIt.hasNext() == TRUE.
FIX: test if an==null in Simulation.java;732.

BUG: (4/3/06, GVG) Wrong icon in View->Edit Icon View if more than 1 icon is in the same group (Bug #915)
Cell.otherView() was retrieving first icon found in the group regardless if it belongs to the correct schematics.
FIX. Matching name as well.

IMP: (4/3/06, GVG) Cleaning gateGenerator and moving major regression code to GenerationTest. Gate regressions
have failed in the last two days due to modifications in Quick class that were not reflectedin test code. This should
prevent the failures in the future. All regression tests are available in Test->Generation menu.

IMP: (4/3/06, DN) Separate list for filled shapes in VectorDrawing.

IMP: (4/1/06, GVG) Adding message dialog when DRC decks are loaded (with and without errors).

BUG: (4/1/06, GVG) Crash in DRC if selectMerge was found (due to latest changes in minArea to speed up
the process). This was noticed while checking Bug 121 (fixed already).

BUG: (4/1/06, GVG) DesignRulesPanel not caching minAreValue.
FIX: (1) MOSRules.setMinValue fixed. (2) DRCDocumentListener added to minArea/minEncArea Texts.
Extra: more editChanged functions added to avoid the redoing of the entire set of rules every time
a field was changed.

IMP: (4/02/06, DN) JUnit tests of database are added to CVS, build.xml and regression scripts updated.

BUG: (3/31/06, GVG) Boundary problems with qTree used in autostich (Bug #912)
FIX: Detection of empty buckets (no nodes).

BUG: (3/30/06, GVG) Fixing Bug 910 (Incremental Schematic DRC is broken).
FIX: Re-organization of errorLoggers so incremental logger will be shared by Layout and Schematics DRC.